# telescope-raspi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  build.sh  clean.sh  deps.sh  install.sh  run.sh  run_cage.sh  stop.sh  telescope.service
docs/: hud.md  protocol.md  state_machine.md
docs/hw/: display.md  serial.md
scripts/: build.sh  deps.sh
src/: globals.h  main.cpp
src/display/: arrow.cpp  arrow.h  directions.cpp  directions.h  display.cpp  display.h  drm_mirror.cpp  drm_mirror.h  hud.cpp  hud.h  sky.cpp  sky.h
src/protocol/: protocol.h  shared_state.cpp  shared_state.h  stream_decoder.cpp  stream_decoder.h
src/serial/: serial_reader.cpp  serial_reader.h  time_sender.cpp  time_sender.h
src/state_machine/: state_machine.cpp  state_machine.h
tools/: mock_sender.py
